Add register API
