# api/openapi.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.3
 info:
-  title: react_vite_sample login API
+  title: react_vite_sample API
   version: 1.0.0
 servers:
 - url: http://localhost:8080
@@ -8,6 +8,8 @@ servers:
 tags:
 - name: login
   description: Concerned about login
+- name: form
+  description: Concerned about form
 paths:
   /login:
     get:
@@ -48,6 +50,29 @@ paths:
                 example: "true"
                 x-content-type: application/json
       x-swagger-router-controller: Login
+  /form:
+    post:
+      tags:
+      - form
+      summary: Post Form Info
+      description: Post form state info
+      operationId: formPOST
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/form_body'
+        required: true
+      responses:
+        "200":
+          description: Success operation
+          content:
+            application/json:
+              schema:
+                type: string
+                example: "true"
+                x-content-type: application/json
+      x-swagger-router-controller: Form
 components:
   schemas:
     login_body:
@@ -56,4 +81,15 @@ components:
         username:
           type: string
         password:
+          type: string
+    form_body:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        city:
+          type: string
+        option:
           type: string
